syntax = "proto2";

package config;

option go_package = "a.yandex-team.ru/cloud/disk_manager/test/mocks/accessservice/config";

////////////////////////////////////////////////////////////////////////////////

message Rule {
    required string IdPattern = 1;
    required string PermissionPattern = 2;
}

message AccessServiceMockConfig {
    required uint32 Port = 1;
    optional string CertFile = 2;
    optional string PrivateKeyFile = 3;
    map<string, string> IamTokenToUserId = 4;
    repeated Rule Rules = 5;
}
